--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
-
 {
   "name": "glb-compressor",
   "version": "1.0.0",
+  "description": "A simple GLB compression server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@gltf-transform/core": "^3.11.0",
-    "@gltf-transform/functions": "^3.11.0",
+    "@gltf-transform/core": "^3.10.0",
+    "@gltf-transform/extensions": "^3.10.0",
+    "@gltf-transform/functions": "^3.10.0",
     "express": "^4.18.2",
     "multer": "^1.4.5"
   }
