--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@gltf-transform/core": "^4.1.3",
-    "@gltf-transform/functions": "^4.1.3",
+    "@gltf-transform/core": "3.10.1",
+    "@gltf-transform/functions": "3.10.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   }
